--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
             var url1 = "https://naver.com"
 	var url2 = "?query=asd"
             
-	setTimeout(()=>{
+// 	setTimeout(()=>{
 		window.location.href= url1.concat(url2)
-	},10000)
+// 	},10000)
 
         </script>
     </head>
