--- a/sto.html
+++ b/sto.html
@@ -5,7 +5,7 @@
             var url1 = "https://naver.com"
 	var url2 = "?query=asd"
             
-	setTimeOut(()=>{
+	setTimeout(()=>{
 		window.location.href= url1.concat(url2)
 	}, 10000)
 
