--- a/first.html
+++ b/first.html
@@ -6,7 +6,7 @@
 	var url2 = "?query=asd"
             
 
-		window.location.href= "https://yanghakoo.github.io/test/"
+		window.location.href= "https://yanghakoo.github.io/test/second.html"
 	
 
         </script>
