--- a/second.html
+++ b/second.html
@@ -5,9 +5,9 @@
             var url1 = "https://naver.com"
 	var url2 = "?query=asd"
             
-
+		setTimeout(()=>{
 		window.location.href= "https://yanghakoo.github.io/test/third.html"
-	
+		},1000)
 
         </script>
     </head>
