--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     
 <head>
         <script>
-            var url1 = "https://naver.com"
-	var url2 = "?query=asd"
+            var url1 = "https://google"
+	var url2 = ".com"
             
 // 	setTimeout(()=>{
 		window.location.href= url1.concat(url2)
