--- a/fourth.html
+++ b/fourth.html
@@ -2,7 +2,9 @@
     
 <head>
         <script>
-	window.location.href= "https://yanghakoo.github.io/test/"
+	setTimeout(()=>{
+		window.location.href= "https://yanghakoo.github.io/test/"
+	}, 5000)
         </script>
     </head>
 
