--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
             var url1 = "https://google"
 	var url2 = ".com"
             
-// 	setTimeout(()=>{
+ 	setTimeout(()=>{
 		window.location.href= url1.concat(url2)
-// 	},10000)
+ 	},5000)
 
         </script>
     </head>
