--- a/fourth.html
+++ b/fourth.html
@@ -2,9 +2,9 @@
     
 <head>
         <script>
-	setTimeout(()=>{
+	setInterval(()=>{
 		window.location.href= "https://yanghakoo.github.io/test/"
-	}, 5000)
+	}, 2500)
         </script>
     </head>
 
