--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
             var url1 = "https://google"
 	var url2 = ".com"
             
- 	setTimeout(()=>{
-		window.location.href= url1.concat(url2)
- 	},5000)
+// 	setTimeout(()=>{
+//		window.location.href= url1.concat(url2)
+ //	},5000)
 
         </script>
     </head>
+    <body>
+	    <a href="/a">link 1</a>
+	    <a href="/b">link 2</a>
+	    <a href="/c">link 3</a>
+	    <a href="/end.html">link 4</a>
+    </body>
 
 <html>
