--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         </script>
     </head>
     <body>
-	    <a href="/a">link 1</a>
-	    <a href="/b">link 2</a>
-	    <a href="/c">link 3</a>
-	    <a href="/end.html">link 4</a>
+	    <a href="/">link 1</a>
+	    <a href="/">link 2</a>
+	    <a href="/">link 3</a>
+	    <a href="/test/end.html">link 4</a>
     </body>
 
 <html>
