--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </script>
     </head>
     <body>
-	    <a href="/a">link 1</a>
+	    <a href="/test">link 1</a>
 	    <a href="/">link 2</a>
 	    <a href="/">link 3</a>
 	    <a href="/test/end.html">link 4</a>
