--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
 	    <a href="/test">link 1</a>
-	    <a href="yanghakoo.github.io/test/">link 2</a>
+	    <a href="//yanghakoo.github.io/test/">link 2</a>
 	    <a href="/">link 3</a>
 	    <a href="/test/end.html">link 4</a>
     </body>
