--- a/fourth.html
+++ b/fourth.html
@@ -2,10 +2,15 @@
     
 <head>
         <script>
-	setInterval(()=>{
-		window.location.href= "https://yanghakoo.github.io/test/"
-	}, 1500)
+//	setInterval(()=>{
+//		window.location.href= "https://yanghakoo.github.io/test/"
+//	}, 1500)
         </script>
-    </head>
+   </head>
 
+	<body onmousemove="window.location.href='https://yanghakoo.github.io/test'">
+		
+	</body>
+	
+	
 <html>
