--- a/third.html
+++ b/third.html
@@ -1,15 +1,14 @@
 <html>
     
 <head>
-        <script>
-            var url1 = "https://naver.com"
-	var url2 = "?query=asd"
-            
-		setTimeout(()=>{
-		window.location.href= "https://yanghakoo.github.io/test/fourth.html"
-		},0)
-
-        </script>
-    </head>
-
+	<style>
+		div {height : 200%}
+	</style>
+</head>
+	<body>
+		<div></div>
+	
+	</body>
+	
+	
 <html>
