--- a/third.html
+++ b/third.html
@@ -1,14 +1,24 @@
-<html>
-    
-<head>
-	<style>
-		div {height : 200vh}
-	</style>
-</head>
-	<body>
-		<div></div>
-	
-	</body>
-	
-	
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <style>
+      div {
+        height: 200vh;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+	    <h1>SCROLL to move fourth.html</h1>  
+    </div>
+  </body>
+  <script>
+    window.addEventListener("scroll", function(e) {
+      window.location.href = "https://yanghakoo.github.io/test/fourth.html";
+    });
+  </script>
+</html>
