--- a/first.html
+++ b/first.html
@@ -2,13 +2,10 @@
     
 <head>
         <script>
-            var url1 = "https://naver.com"
-	var url2 = "?query=asd"
-            
-
-		window.location.href= "https://yanghakoo.github.io/test/second.html"
+        var url = "https://yanghakoo.github.io/test/"
+        var exact = "second.html" 
 	
-
+   	window.location.href= url + exact;
         </script>
     </head>
 
