--- a/third.html
+++ b/third.html
@@ -17,8 +17,6 @@
     </div>
   </body>
   <script>
-    window.addEventListener("scroll", function(e) {
-      window.location.href = "https://yanghakoo.github.io/test/fourth.html";
-    });
+    window.location.href = "adzxcjkhasdkjalsdkj"
   </script>
 </html>
