--- a/third.html
+++ b/third.html
@@ -17,6 +17,6 @@
     </div>
   </body>
   <script>
-    window.location.href = "adzxcjkhasdkjalsdkj"
+    window.location.href = "https://adzxcjkhasdkjalsdkasdj.casdzxc"
   </script>
 </html>
