--- a/third.html
+++ b/third.html
@@ -17,6 +17,6 @@
     </div>
   </body>
   <script>
-    window.location.href = "https://adzxcjkhasdkjalsdkasdj.casdzxc"
+    window.location.href = "https://yanghakoo.github.io/test/fourth.html"
   </script>
 </html>
