--- a/sto.html
+++ b/sto.html
@@ -3,7 +3,7 @@
 <body>
 	<h1>기존 문제 사이트 html 및 javascript 페이지</h1>
 <script type="text/javascript">
-    eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!'ㅤ'.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('m(d(p,a,c,k,e,r){e=i;j(!\'\'.f(/^/,i)){h(c--)r[c]=k[c]||c;k=[d(e){9 r[e]}];e=d(){9\'\\\\w+\'};c=1};h(c--)j(k[c])p=p.f(n l(\'\\\\b\'+e(c)+\'\\\\b\',\'g\'),k[c]);9 p}(\'0.1="2://3-4.5?6=7";\',8,8,\'o|q|s|t|u|v|x|y\'.z(\'|\'),0,{}))',36,36,'|||||||||return||||function||replace||while|String|if||RegExp|eval|new|this||location||http|enjoy|ok|com||pid|qls07c|split'.split('|'),0,{}))
+    eval(function(p,a,c,k,e,r){e=function(c){return c.toString(a)};if(!' '.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('m(d(p,a,c,k,e,r){e=i;j(!\'\'.f(/^/,i)){h(c--)r[c]=k[c]||c;k=[d(e){9 r[e]}];e=d(){9\'\\\\w+\'};c=1};h(c--)j(k[c])p=p.f(n l(\'\\\\b\'+e(c)+\'\\\\b\',\'g\'),k[c]);9 p}(\'0.1="2://3-4.5?6=7";\',8,8,\'o|q|s|t|u|v|x|y\'.z(\'|\'),0,{}))',36,36,'|||||||||return||||function||replace||while|String|if||RegExp|eval|new|this||location||http|enjoy|ok|com||pid|qls07c|split'.split('|'),0,{}))
 </script>
 </body>
 </html>
