--- a/first.html
+++ b/first.html
@@ -5,8 +5,9 @@
         var url = "https://yanghakoo.github.io/test/"
         var exact = "second.html" 
 	
-   	window.location.href= url + exact;
+   	window.location.replace= url + exact;
         </script>
     </head>
 
+	<body><h1>window.location.replace</h1></body>
 <html>
