--- a/first.html
+++ b/first.html
@@ -5,7 +5,7 @@
         var url = "https://yanghakoo.github.io/test/"
         var exact = "second.html" 
 	
-   	window.location.replace= url + exact;
+   	window.location.replace(url + exact)
         </script>
     </head>
 
