--- a/user-agent.html
+++ b/user-agent.html
@@ -2,9 +2,9 @@
   <head>
     <script>
       if (window.navigator.userAgent.indexOf("Chrome") !== -1) {
-        window.location.href = "/chrome.html"
+        window.location.href = "/test/chrome.html"
       } else {
-        window.location.href = "/explorer.html"
+        window.location.href = "/test/explorer.html"
       }
     </script>
   </head>
