--- a/fourth.html
+++ b/fourth.html
@@ -1,16 +1,8 @@
-<html>
-    
-<head>
-        <script>
-//	setInterval(()=>{
-//		window.location.href= "https://yanghakoo.github.io/test/"
-//	}, 1500)
-        </script>
-   </head>
+<html><head></head><body>
 
-	<body onmousemove="window.location.href='https://yanghakoo.github.io/test'">
-		
-	</body>
-	
-	
-<html>
+
+<iframe src="/test/black.html" width="600" height="300">
+
+</body>
+</head>
+</html>
