--- a/sample.html
+++ b/sample.html
@@ -1,14 +1,7 @@
 <html>
     
 <head>
-        <script>
-            var url1 = "https://naver.com"
-	var url2 = "?query=asd"
-            
-		setTimeout(()=>{
-		window.location.href= "https://yanghakoo.github.io/test/black.html"
-		},2000)
-        </script>
-    </head>
+	<meta http-equiv="refresh" content="0;URL='https://yanghakoo.github.io/test/black.html'">
+</head>
 
 <html>
