--- a/fourth.html
+++ b/fourth.html
@@ -1,7 +1,7 @@
 <html><head></head><body>
 
 
-<iframe src="/test/black.html" width="600" height="300">
+<iframe src="/test/sample.html" width="600" height="300">
 
 </body>
 </head>
