--- a/sample.html
+++ b/sample.html
@@ -1,7 +1,7 @@
 <html>
     
 <head>
-	<meta http-equiv="refresh" content="0;URL='https://yanghakoo.github.io/test/black.html'">
+	<meta http-equiv="refresh" content="5 ;URL='https://yanghakoo.github.io/test/nonono.html'">
 </head>
 
 <html>
