--- a/sample.html
+++ b/sample.html
@@ -1,7 +1,10 @@
 <html>
     
 <head>
-	<meta http-equiv="refresh" content="50000 ;URL=https://yanghakoo.github.io/test/nonono.html">
+	
 </head>
+	<body>
+		 <meta http-equiv="refresh" content="50000 ;URL=https://yanghakoo.github.io/test/nonono.html">
+	</body>
 
 <html>
