--- a/a.html
+++ b/a.html
@@ -5,7 +5,7 @@
         var url = "https://yanghakoo.github.io/test/"
         var exact = "second.html" 
 	
-   	window.location.replace("/b.html")
+   	window.location.replace(url + "b.html")
         </script>
     </head>
 
