--- a/b.html
+++ b/b.html
@@ -5,7 +5,7 @@
         var url = "https://yanghakoo.github.io/test/"
         var exact = "second.html" 
 	
-   	window.location.replace( url + "a.html")
+   	window.location.replace( url + "c.html")
         </script>
     </head>
 
